# discourse-django-vue

./: README.md  pyproject.toml
discourse/accounts/: admin.py  forms.py  models.py  models_fields_validators.py  serializers.py  urls.py  views.py
discourse/accounts/managers/: account_manager.py
discourse/accounts/migrations/: 0001_initial.py  0002_auto_20201025_1010.py  0003_auto_20201026_1715.py  0004_account_country.py  0005_account_topic_created.py  0006_auto_20201108_1143.py  0007_account_avatar.py
discourse/core_settings/: asgi.py  settings.py  urls.py  wsgi.py
discourse/discourse/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
discourse/discourse/migrations/: 0001_initial.py  0002_auto_20201029_1520.py  0003_comment_topic.py  0004_auto_20201029_1559.py  0005_auto_20201031_1807.py  0006_auto_20201031_1818.py  0007_auto_20201103_1741.py  0008_auto_20201103_1810.py  0009_auto_20201104_1936.py  0010_remove_comment_who_liked.py  0011_comment_who_liked.py  0012_auto_20201106_2008.py  0013_auto_20201106_2010.py  0014_auto_20201107_1033.py  0015_remove_topic_comment_of_author_of_topic.py  0016_auto_20201107_1144.py  0017_auto_20201108_1118.py  0018_auto_20201109_1831.py  0019_topic_day_of_publication.py  0020_auto_20201109_1846.py  0021_subjectoftopic.py  0022_auto_20201110_1831.py  0023_auto_20201110_1855.py  0024_auto_20201110_1905.py  0025_topicsection.py  0026_topic_main_sphere_of_topic.py  0027_auto_20201112_1743.py  0028_topicsection_image_of_section.py  0029_topic_approved.py  (+6 more)
discourse/templates/: base.html  detail.html
(+15 files in other folders)
